force-app/main/default/objects/Enrollment__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <description>Members</description>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>